--- a/set_tower_facts.yml
+++ b/set_tower_facts.yml
@@ -1,15 +1,26 @@
-- name: set tower facts on cfme
-  hosts: tag_role_cfme:&tag_app_management_lightbulb:&{{ pod_name }}
-  gather_facts: no
-  tasks:
-    - name: set tower facts on cfme
-      set_fact:
-        tower_public_ip: "{{ hostvars[item]['ec2_ip_address'] }}"
-        tower_private_ip: "{{ hostvars[item]['ec2_private_ip_address'] }}"
-        tower_dns_name: "{{ hostvars[item]['ec2_private_dns_name'] }}"
-      with_items: "{{ groups[pod_name] }}"
-      when: (hostvars[item]['ec2_tag_role'] == 'tower')
+- name: set facts on pairs
+  set_fact:
+    pair_public_ip: "{{ hostvars[item]['ec2_ip_address'] }}"
+    pair_private_ip: "{{ hostvars[item]['ec2_private_ip_address'] }}"
+    pair_dns_name: "{{ hostvars[item]['ec2_private_dns_name'] }}"
+  with_indexed_items: "{{ groups[ec2_tag_pod] }}"
+  when: (hostvars[item]['ec2_tag_role'] == 'cfme')
+  delegate_to: "{{ item }}"
+  delegate_facts: yes
 
-    - name: debug variable
-      debug:
-        msg: "tower public ip: {{ tower_public_ip }}"
+
+
+
+- name: set tower facts on cfme
+  set_fact:
+    tower_public_ip: "{{ hostvars[item]['ec2_ip_address'] }}"
+    tower_private_ip: "{{ hostvars[item]['ec2_private_ip_address'] }}"
+    tower_dns_name: "{{ hostvars[item]['ec2_private_dns_name'] }}"
+  with_indexed_items: "{{ groups[pod_name] }}"
+  when: (hostvars[item]['ec2_tag_role'] == 'cfme')
+  delegate_to: "{{ item }}"
+  delegate_facts: yes
+
+- name: debug variable
+  debug:
+    msg: "tower public ip: {{ tower_public_ip }}"
