--- a/nodes-ec2.yml
+++ b/nodes-ec2.yml
@@ -7,11 +7,11 @@ nodes:
     instance_type: t2.large
     image: ami-c74b98bd #cfme
     volumes:
-      - device_name: /dev/sda1
+      - device_name: /dev/xvda
         volume_type: gp2
         volume_size: 20
         delete_on_termination: true
-      - device_name: /dev/sdb1
+      - device_name: /dev/xvdb
         volume_type: gp2
         volume_size: 20
         delete_on_termination: true
