--- a/teardown_lab.yml
+++ b/teardown_lab.yml
@@ -16,4 +16,4 @@
       ec2:
         region: "{{ ec2_region }}"
         state: "absent"
-        instance_ids: "{{ ec2_instances.instances | map(attribute='id') | list }}"
+        instance_ids: "{{ ec2_instances.instances | map(attribute='instance_id') | list }}"
