--- a/roles/cfme-add-provider-tower/tasks/main.yml
+++ b/roles/cfme-add-provider-tower/tasks/main.yml
@@ -20,8 +20,7 @@
 - name: get cert
   command: cat /etc/tower/tower.cert
   register: towercert
-  delegate_to: "localhost"
-  become: false
+  delegate_to: "{{ tower_public_ip }}"
 
 - name: towercrt
   lineinfile:
