--- a/roles/provision-ansible-tower/tasks/main.yml
+++ b/roles/provision-ansible-tower/tasks/main.yml
@@ -91,6 +91,7 @@
 - name: install ansible-tower-cli
   pip:
     name: ansible-tower-cli
+    version: 3.1.4
 
 - name: copy tower-cli config /etc/tower/tower_cli.cfg
   template:
