--- a/roles/tower-add-content/tasks/main.yml
+++ b/roles/tower-add-content/tasks/main.yml
@@ -43,7 +43,7 @@
   delay: 5
 
 - name: create job template nginx_test_job_template
-  command: tower-cli job_template create --name provision-nginx-on-ec2 --project=ansible-nginx-example --inventory=aws --machine-credential ec2-user --cloud-credential ldo-ec2 --playbook nginx_full_ec2.yaml --verbosity more_verbose --extra-vars "ec2_tag_Name=ec2_image=ami-d3c269c5 ec2_instance_type=m3.large ec2_volume_size=41"
+  command: tower-cli job_template create --name provision-nginx-on-ec2 --project=ansible-nginx-example --inventory=aws --machine-credential ec2-user --cloud-credential ldo-ec2 --playbook nginx_full_ec2.yml --verbosity more_verbose --extra-vars "ec2_tag_Name=ec2_image=ami-d3c269c5 ec2_instance_type=m3.large ec2_volume_size=41"
   register: nginx_test_job_template
   retries: 10
   until: nginx_test_job_template.rc == 0
