--- a/roles/cfme-add-provider-ec2/tasks/main.yml
+++ b/roles/cfme-add-provider-ec2/tasks/main.yml
@@ -14,5 +14,9 @@
   become: false
   delegate_to: localhost
   register: result
+  retries: 10
+  until: result|success
+  ignore_errors: yes
+  delay: 5
 
 - debug: var=result
