--- a/template-nodes-per-pod-ec2.yml
+++ b/template-nodes-per-pod-ec2.yml
@@ -4,7 +4,7 @@ template_nodes:
     role: cfme
     app_name: management_lightbulb
     pod_name: "{{ item.username }}"
-    instance_type: t2.large
+    instance_type: t2.medium
     image: ami-c74b98bd #cfme
     volumes:
       - device_name: /dev/xvda
