--- a/roles/cfme-add-provider-tower/tasks/main.yml
+++ b/roles/cfme-add-provider-tower/tasks/main.yml
@@ -27,6 +27,11 @@
     dest: /etc/pki/ca-trust/source/anchors/tower.crt
     line: "{{ towercert.stdout }}"
     create: yes
+  register: towercrt
+  retries: 10
+  until: towercrt|success
+  ignore_errors: yes
+  delay: 5
 
 - name: update certs
   shell: update-ca-trust
