--- a/template-nodes-per-pod-ec2.yml
+++ b/template-nodes-per-pod-ec2.yml
@@ -19,7 +19,7 @@ template_nodes:
     role: tower
     app_name: management_lightbulb
     pod_name: "{{ item.username }}"
-    instance_type: t2.medium
+    instance_type: t2.large
     image: ami-85241def #rhel7-tower
     volumes:
       - device_name: /dev/sda1
