--- a/roles/tower-add-content/tasks/main.yml
+++ b/roles/tower-add-content/tasks/main.yml
@@ -10,7 +10,7 @@
   no_log: True
 
 - name: add ec2 creds
-  command: tower-cli credential create --kind ssh --username ec2-user --user admin --organization Default --name ec2-user --ssh-key-data /tmp/private_key.pem
+  command: tower-cli credential create --kind ssh --username centos --user admin --organization Default --name ec2-centos-user --ssh-key-data /tmp/private_key.pem
   no_log: True
 
 - name: remove file
@@ -43,7 +43,7 @@
   delay: 5
 
 - name: create job template nginx_provision_job_template
-  command: tower-cli job_template create --name provision-nginx-on-ec2 --project=ansible-nginx-example --inventory=aws --machine-credential ec2-user --cloud-credential oa-ec2 --playbook nginx_full_ec2.yml --verbosity more_verbose --become-enabled True --extra-vars "ansible_user=centos ec2_key_name={{ ec2_key_name }} ec2_region={{ ec2_region }} ec2_name_prefix={{ ec2_name_prefix }} ec2_vpc_id={{ ec2_vpc_id }} ec2_vpc_subnet_id={{ ec2_vpc_subnet_id }} hosted_zone_domain_name=rhdemo.io subdomain={{ ec2_name_prefix }}-{{ ec2_tag_pod }}-nginx"
+  command: tower-cli job_template create --name provision-nginx-on-ec2 --project=ansible-nginx-example --inventory=aws --machine-credential ec2-centos-user --cloud-credential oa-ec2 --playbook nginx_full_ec2.yml --verbosity more_verbose --become-enabled True --extra-vars "ansible_user=centos ec2_key_name={{ ec2_key_name }} ec2_region={{ ec2_region }} ec2_name_prefix={{ ec2_name_prefix }} ec2_vpc_id={{ ec2_vpc_id }} ec2_vpc_subnet_id={{ ec2_vpc_subnet_id }} hosted_zone_domain_name=rhdemo.io subdomain={{ ec2_name_prefix }}-{{ ec2_tag_pod }}-nginx"
   register: nginx_provision_job_template
   retries: 10
   until: nginx_provision_job_template.rc == 0
@@ -51,7 +51,7 @@
   delay: 5
 
 - name: create job template nginx_terminate_job_template
-  command: tower-cli job_template create --name terminate-nginx-on-ec2 --project=ansible-nginx-example --inventory=aws --machine-credential ec2-user --cloud-credential oa-ec2 --playbook nginx_teardown_ec2.yml --verbosity more_verbose --become-enabled True --extra-vars "ansible_user=centos ec2_key_name={{ ec2_key_name }} ec2_region={{ ec2_region }} ec2_name_prefix={{ ec2_name_prefix }} ec2_vpc_id={{ ec2_vpc_id }} ec2_vpc_subnet_id={{ ec2_vpc_subnet_id }} hosted_zone_domain_name=rhdemo.io subdomain={{ ec2_name_prefix }}-{{ ec2_tag_pod }}-nginx"
+  command: tower-cli job_template create --name terminate-nginx-on-ec2 --project=ansible-nginx-example --inventory=aws --machine-credential ec2-centos-user --cloud-credential oa-ec2 --playbook nginx_teardown_ec2.yml --verbosity more_verbose --become-enabled True --extra-vars "ansible_user=centos ec2_key_name={{ ec2_key_name }} ec2_region={{ ec2_region }} ec2_name_prefix={{ ec2_name_prefix }} ec2_vpc_id={{ ec2_vpc_id }} ec2_vpc_subnet_id={{ ec2_vpc_subnet_id }} hosted_zone_domain_name=rhdemo.io subdomain={{ ec2_name_prefix }}-{{ ec2_tag_pod }}-nginx"
   register: nginx_terminate_job_template
   retries: 10
   until: nginx_terminate_job_template.rc == 0
