--- a/w2-tower-cf-lb-provision_lab.yml
+++ b/w2-tower-cf-lb-provision_lab.yml
@@ -1,10 +1,11 @@
-- name: Generate users list
+- name: Generate users and nodes lists
   hosts: localhost
   connection: local
   become: no
   gather_facts: no
   vars_files:
-    - template-nodes-per-pod-ec2.yml
+    - hosting-node-ec2.yml
+    - w2-tower-cf-lb-template-nodes-ec2.yml
   tasks:
     - name: generate users list
       set_fact:
@@ -14,7 +15,7 @@
 
     - name: initialize nodes variable
       set_fact:
-        nodes: []
+        nodes: [{{ hosting_nodes }}]
 
     - name: generate nodes list
       set_fact:
@@ -33,6 +34,16 @@
   become: no
   roles:
     - create-runtime-inventory
+
+- name: configure common options on all nodes
+  hosts: tag_app_management_lightbulb
+  become: yes
+  remote_user: ec2-user
+  become_method: sudo
+  gather_facts: true
+  roles:
+    - user_accounts
+    - common
 
 - name: provision tower
   hosts: tag_role_tower:&tag_app_management_lightbulb
@@ -60,3 +71,19 @@
     - provision-cfme
     - cfme-add-provider-ec2
     - cfme-add-provider-tower
+
+- name: setup hosting
+  hosts: tag_role_hosting:&tag_app_management_lightbulb
+  become: yes
+  roles:
+    - provision-dns-ec2
+    - nginx
+    - hosting-upload-content
+
+- name: email inventory to instructor
+  hosts: localhost
+  connection: local
+  become: no
+  gather_facts: no
+  roles:
+    - email-instructor
