--- a/hosting-node-ec2.yml
+++ b/hosting-node-ec2.yml
@@ -1,9 +1,9 @@
 ---
 hosting_nodes:
-  - name: "{{ item.username }}-hosting"
+  - name: "main-hosting"
     role: hosting
     app_name: management_lightbulb
-    pod_name: "{{ item.username }}"
+    pod_name: "main"
     instance_type: t2.micro
     image: ami-85241def #rhel7
     volumes:
