--- a/w2-tower-cf-lb-provision_lab.yml
+++ b/w2-tower-cf-lb-provision_lab.yml
@@ -23,6 +23,9 @@
       with_items:
         - "{{ users }}"
 
+    - debug:
+        var: nodes
+
 - name: provision ec2 instances
   hosts: localhost
   become: no
