--- a/roles/create-runtime-inventory/tasks/main.yml
+++ b/roles/create-runtime-inventory/tasks/main.yml
@@ -61,6 +61,8 @@
     name: "{{ item.tagged_instances[0].public_ip }}"
     ansible_host: "{{ item.tagged_instances[0].public_ip }}"
     groups: tag_role_hosting,tag_app_management_lightbulb
+  with_items: "{{ instances.results }}"
+  when: ('management_lightbulb' in item.invocation.module_args.instance_tags.app) and ('hosting' in item.invocation.module_args.instance_tags.role)
   changed_when: no
   tags:
     - provision
