--- a/roles/generate-content/tasks/main.yml
+++ b/roles/generate-content/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+- name: debug output
+  debug:
+    msg: "{{ result_item.item.name}}"
+  with_items: "{{ instances.results|groupby('item') }}"
+  loop_control:
+    loop_var: result_item
+  when: result_item['item'] is defined
+
 - name: Generate student inventories
   template:
     src: instances.txt.j2
