--- a/roles/generate-content/tasks/main.yml
+++ b/roles/generate-content/tasks/main.yml
@@ -4,10 +4,11 @@
 
 - name: debug output
   debug:
-    msg: "{{ result_item.item.item.pod_name}}"
+    msg: "{{ result_item }}"
   with_items: "{{ instances.results|groupby('item') }}"
   loop_control:
     loop_var: result_item
+  when: result_item['item'] is undefined
 
 - name: Generate student inventories
   template:
