--- a/roles/generate-content/tasks/main.yml
+++ b/roles/generate-content/tasks/main.yml
@@ -10,8 +10,10 @@
 - name: test file
   template:
     src: test.txt.j2
-    dest: ./{{ item.username }}-test.txt
+    dest: ./{{ user.username }}-test.txt
   with_items: "{{ users }}"
+  loop_control:
+    loop_var: user
 
 - name: Generate student inventories
   template:
