--- a/roles/provision-dns-ec2/tasks/main.yml
+++ b/roles/provision-dns-ec2/tasks/main.yml
@@ -7,6 +7,7 @@
   register: routerelbrec
   when: hosted_zone_domain_name is defined and ec2_name_prefix is defined
   delegate_to: 127.0.0.1
+  become: no
 
 - name: create Router ELB DNS Entry if it doesn't exist
   route53:
@@ -18,3 +19,4 @@
     value: "{{ inventory_hostname }}"
   when: routerelbrec.set is defined and "{} == routerelbrec.set"
   delegate_to: 127.0.0.1
+  become: no
