--- a/roles/create-runtime-inventory/tasks/main.yml
+++ b/roles/create-runtime-inventory/tasks/main.yml
@@ -4,7 +4,7 @@
     name: "{{ item.tagged_instances[0].public_ip }}"
     ansible_host: "{{ item.tagged_instances[0].public_ip }}"
     ansible_user: ec2-user
-    groups: lab_hosts,control_nodes
+    groups: lab_hosts,control_nodes,tag_app_management_lightbulb
   with_items: "{{ instances.results }}"
   when: ('management_lightbulb' in item.invocation.module_args.instance_tags.app) and ('control' in item.invocation.module_args.instance_tags.role)
   changed_when: no
@@ -16,7 +16,7 @@
     name: "{{ item.tagged_instances[0].public_ip }}"
     ansible_host: "{{ item.tagged_instances[0].public_ip }}"
     ansible_user: ec2-user
-    groups: lab_hosts,managed_nodes
+    groups: lab_hosts,managed_nodes,tag_app_management_lightbulb
   with_items: "{{ instances.results }}"
   when: ('management_lightbulb' in item.invocation.module_args.instance_tags.app) and ('control' not in item.invocation.module_args.instance_tags.role)
   changed_when: no
