--- a/roles/generate-content/tasks/main.yml
+++ b/roles/generate-content/tasks/main.yml
@@ -20,7 +20,7 @@
 
 - name: Generate html page with student details
   template:
-    src: index.html.j2
+    src: "{{ workshop_name }}-index.html.j2"
     dest: ./index.html
   tags:
     - inventory
