--- a/w1-ansible-tower-lb-template-nodes-ec2.yml
+++ b/w1-ansible-tower-lb-template-nodes-ec2.yml
@@ -5,7 +5,7 @@ template_nodes:
     app_name: management_lightbulb
     pod_name: "{{ item.username }}"
     instance_type: t2.medium
-    image: ami-85241def #rhel7-tower
+    image: "{{ rhel7_ami_id|default('ami-85241def') }}" #rhel7-tower
     volumes:
       - device_name: /dev/sda1
         volume_type: gp2
@@ -16,7 +16,7 @@ template_nodes:
     app_name: management_lightbulb
     pod_name: "{{ item.username }}"
     instance_type: t2.micro
-    image: ami-85241def #rhel7
+    image: "{{ rhel7_ami_id|default('ami-85241def') }}" #rhel7
     volumes:
       - device_name: /dev/sda1
         volume_type: gp2
@@ -27,7 +27,7 @@ template_nodes:
     app_name: management_lightbulb
     pod_name: "{{ item.username }}"
     instance_type: t2.micro
-    image: ami-85241def #rhel7
+    image: "{{ rhel7_ami_id|default('ami-85241def') }}" #rhel7
     volumes:
       - device_name: /dev/sda1
         volume_type: gp2
