--- a/w2-tower-cf-lb-template-nodes-ec2.yml
+++ b/w2-tower-cf-lb-template-nodes-ec2.yml
@@ -5,7 +5,7 @@ template_nodes:
     app_name: management_lightbulb
     pod_name: "{{ item.username }}"
     instance_type: t2.xlarge
-    image: ami-c74b98bd #cfme
+    image: "{{ cfme_ami_id|default('ami-c74b98bd') }}" #cfme
     volumes:
       - device_name: /dev/xvda
         volume_type: gp2
@@ -20,7 +20,7 @@ template_nodes:
     app_name: management_lightbulb
     pod_name: "{{ item.username }}"
     instance_type: t2.large
-    image: ami-85241def #rhel7-tower
+    image: "{{ rhel7_ami_id|default('ami-85241def') }}" #rhel7-tower
     volumes:
       - device_name: /dev/sda1
         volume_type: gp2
