add find ami ids playbook

--- a/provision_lab.yml
+++ b/provision_lab.yml
@@ -47,6 +47,8 @@
   roles:
     - user_accounts
     - common
+    - geerlingguy.nodejs
+    - wetty
 
 - name: configure control node
   hosts: control_nodes
