--- a/provision_lab.yml
+++ b/provision_lab.yml
@@ -47,7 +47,7 @@
   roles:
     - user_accounts
     - common
-    - geerlingguy.repo-epel
+    - ansible-role-repo-epel
     - geerlingguy.nodejs
     - wetty
 
