--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,9 +1,6 @@
 - src: https://github.com/oatakan/ansible-role-ec2
   version: origin/master
 
-- src: https://github.com/oatakan/ansible-role-repo-epel
-  version: origin/master
-
-#- src: geerlingguy.repo-epel
+- src: geerlingguy.repo-epel
 
 - src: geerlingguy.nodejs
