--- a/roles/wetty/defaults/main.yml
+++ b/roles/wetty/defaults/main.yml
@@ -1,1 +1,20 @@
+# file: roles/wetty/defaults/main.yml
+---
+letsencrypt: no
+domain_name: "{{ hosted_zone_domain_name }}"
+openssl_self_signed:
+  - name: '{{ domain_name }}'
+    domains: ['*.{{ domain_name }}', '{{ domain_name }}']
+    country: 'US'
+    state: 'TX'
+    city: 'Austin'
+    organization: 'Red Hat'
+    unit: 'Commercial'
+    email: 'oatakan@redhat.com'
+    days: 3650
+
+system_user: "{{ username }}"
+key_path: "home/{{ system_user }}/.wetty/privkey.pem"
+cert_path: "home/{{ system_user }}/.wetty/cert.pem"
 wetty_port: 8888
+wetty_user: "{{ username }}"
