--- a/provision_lab.yml
+++ b/provision_lab.yml
@@ -69,6 +69,9 @@
   roles:
     - provision-ansible-tower
     - tower-add-content
+    - geerlingguy.repo-epel
+    - geerlingguy.nodejs
+    - wetty
 
 - name: provision cfme
   hosts: tag_role_cfme:&tag_app_management_lightbulb
