troubleshoot tower installation

--- a/roles/provision-ansible-tower/tasks/main.yml
+++ b/roles/provision-ansible-tower/tasks/main.yml
@@ -57,6 +57,8 @@
     src: templates/towerinventorysetup
     dest: /tmp/ansible-tower-setup-bundle-{{ tower_version }}.el7/inventory
 
+- pause:
+
 - name: execute the tower installation
   command: /tmp/ansible-tower-setup-bundle-{{ tower_version }}.el7/setup.sh
   register: towerinstall
