switch to student id

--- a/roles/cfme-add-provider-ec2/tasks/main.yml
+++ b/roles/cfme-add-provider-ec2/tasks/main.yml
@@ -5,8 +5,8 @@
     provider_type: 'amazon'
     state: 'present'
     provider_region: 'us-east-1'
-    access_key_id: "{{ ec2_access }}"
-    secret_access_key: "{{ ec2_secret }}"
+    access_key_id: "{{ student_ec2_access }}"
+    secret_access_key: "{{ student_ec2_secret }}"
     miq_url: 'https://{{ inventory_hostname }}'
     miq_username: 'admin'
     miq_password: "{{ cfme_pass }}"
