--- a/roles/tower-add-content/tasks/main.yml
+++ b/roles/tower-add-content/tasks/main.yml
@@ -27,7 +27,7 @@
   delay: 5
 
 - name: create group
-  command: tower-cli group create -n aws --credential student-ec2 -i aws --source ec2 --source-regions {{ student_ec2_region }} --instance-filters "tag:name={{ student_ec2_name_prefix }}-{{ student_ec2_tag_pod }}*"
+  command: tower-cli group create -n aws --credential student-ec2 -i aws --source ec2 --source-regions {{ student_ec2_region }} --instance-filters "tag:name={{ student_ec2_name_prefix }}-{{ ec2_tag_pod }}*"
   register: group
   retries: 10
   until: group.rc == 0
@@ -43,7 +43,7 @@
   delay: 5
 
 - name: create job template nginx_provision_job_template
-  command: tower-cli job_template create --name provision-nginx-on-ec2 --project=ansible-nginx-example --inventory=aws --machine-credential ec2-centos-user --cloud-credential student-ec2 --playbook nginx_full_ec2.yml --verbosity more_verbose --become-enabled True --extra-vars "ec2_key_name={{ student_ec2_key_name }} ec2_region={{ student_ec2_region }} ec2_name_prefix={{ student_ec2_name_prefix }} ec2_vpc_id={{ student_ec2_vpc_id }} ec2_vpc_subnet_id={{ student_ec2_vpc_subnet_id }} hosted_zone_domain_name=rhdemo.io subdomain={{ student_ec2_name_prefix }}-{{ ec2_tag_pod }}-nginx"
+  command: tower-cli job_template create --name provision-nginx-on-ec2 --project=ansible-nginx-example --inventory=aws --machine-credential ec2-centos-user --cloud-credential student-ec2 --playbook nginx_full_ec2.yml --verbosity more_verbose --become-enabled True --extra-vars "ec2_key_name={{ student_ec2_key_name }} ec2_region={{ student_ec2_region }} ec2_name_prefix={{ student_ec2_name_prefix }}-{{ ec2_tag_pod }} ec2_vpc_id={{ student_ec2_vpc_id }} ec2_vpc_subnet_id={{ student_ec2_vpc_subnet_id }} hosted_zone_domain_name=rhdemo.io subdomain={{ student_ec2_name_prefix }}-{{ ec2_tag_pod }}-nginx"
   register: nginx_provision_job_template
   retries: 10
   until: nginx_provision_job_template.rc == 0
@@ -51,7 +51,7 @@
   delay: 5
 
 - name: create job template nginx_terminate_job_template
-  command: tower-cli job_template create --name terminate-nginx-on-ec2 --project=ansible-nginx-example --inventory=aws --machine-credential ec2-centos-user --cloud-credential student-ec2 --playbook nginx_teardown_ec2.yml --verbosity more_verbose --become-enabled True --extra-vars "ec2_key_name={{ student_ec2_key_name }} ec2_region={{ student_ec2_region }} ec2_name_prefix={{ student_ec2_name_prefix }} ec2_vpc_id={{ student_ec2_vpc_id }} ec2_vpc_subnet_id={{ student_ec2_vpc_subnet_id }} hosted_zone_domain_name=rhdemo.io subdomain={{ student_ec2_name_prefix }}-{{ ec2_tag_pod }}-nginx"
+  command: tower-cli job_template create --name terminate-nginx-on-ec2 --project=ansible-nginx-example --inventory=aws --machine-credential ec2-centos-user --cloud-credential student-ec2 --playbook nginx_teardown_ec2.yml --verbosity more_verbose --become-enabled True --extra-vars "ec2_key_name={{ student_ec2_key_name }} ec2_region={{ student_ec2_region }} ec2_name_prefix={{ student_ec2_name_prefix }}-{{ ec2_tag_pod }} ec2_vpc_id={{ student_ec2_vpc_id }} ec2_vpc_subnet_id={{ student_ec2_vpc_subnet_id }} hosted_zone_domain_name=rhdemo.io subdomain={{ student_ec2_name_prefix }}-{{ ec2_tag_pod }}-nginx"
   register: nginx_terminate_job_template
   retries: 10
   until: nginx_terminate_job_template.rc == 0
