--- a/find_amis.yml
+++ b/find_amis.yml
@@ -13,6 +13,12 @@
         region: "{{ ec2_region }}"
       register: rhel7_ami_find
 
+    - name: find ami for windows 2016
+      ec2_ami_find:
+        name: "{{ image_names['win-2016'] }}"
+        region: "{{ ec2_region }}"
+      register: win2016_ami_find
+
     - name: find ami for cfme
       ec2_ami_find:
         name: "{{ image_names['cfme-58'] }}"
@@ -24,6 +30,11 @@
         rhel7_ami_id: "{{ rhel7_ami_find.results[0].ami_id }}"
       when: rhel7_ami_find.results is defined
 
+    - name: set ami id for windows 2016
+      set_fact:
+        win2016_ami_id: "{{ win2016_ami_find.results[0].ami_id }}"
+      when: win2016_ami_find.results is defined
+
     - name: set ami id for cfme
       set_fact:
         cfme_ami_id: "{{ cfme_ami_find.results[0].ami_id }}"
@@ -31,6 +42,9 @@
 
     - debug:
         var: rhel7_ami_id
+
+    - debug:
+        var: win2016_ami_id
 
     - debug:
         var: cfme_ami_id
