--- a/hosting-node-ec2.yml
+++ b/hosting-node-ec2.yml
@@ -11,3 +11,21 @@ hosting_nodes:
         volume_type: gp2
         volume_size: 10
         delete_on_termination: true
+  - name: "gitlab"
+    role: gitlab
+    app_name: management_lightbulb
+    pod_name: "main"
+    instance_type: t2.micro
+    image: "{{ rhel7_ami_id|default('ami-85241def') }}" #rhel7
+    volumes:
+      - device_name: /dev/sda1
+        volume_type: gp2
+        volume_size: 10
+        delete_on_termination: true
+  - name: "windc"
+    role: windows_domain_controller
+    app_name: management_lightbulb
+    pod_name: "main"
+    instance_type: t2.medium
+    image: "{{ win2016_ami_id|default('ami-603b1c1a') }}" #windows 2016 base
+    user_data: "{{ lookup('template', 'templates/windows.userdata.txt.j2') }}"
